# Ai-Medical-Triage-Assistant

./: .env  .env.example  Makefile  README.md  docker-compose.yaml  goncalo_ai_usage.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
backend/: .env.example  test_db.py
backend/ops/: backend.Dockerfile  pyproject.toml
backend/src/app/: main.py
backend/src/app/agents/: crew.py  nurse.py
backend/src/app/api/: routes.py
backend/src/app/core/: settings.py
backend/src/app/database/: database_engine.py  db_models.py
backend/src/app/models/: schemas.py  triage.py
