[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "crewai>=1.14.4",
    "fastapi>=0.136.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.10.1",
    "requests>=2.34.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
